# croco-reviewer

./: .env_example  Dockerfile  README.md  api_request_with_hg.py  api_request_with_huggingface  example1_Vasilev.html  index.html  main.py  otchets_former.py  pr_collector.py  pr_collector_example.py  prompts.py  pyproject.toml  response_example.py  reviewer.py  test.py
croco_reviewer/: analyzers.py  diffs_collectors.py  main.py  prompts.py
croco_reviewer/reports/: mr_report.json
